--- a/src/styl/responsive/tablet-portrait.styl
+++ b/src/styl/responsive/tablet-portrait.styl
@@ -28,6 +28,14 @@
   .mobile-only
     display: none !important
 
+
+  // ******************************************************
+
+  // BASIC
+
+  p
+    max-width: none
+
   // ******************************************************
 
   // PROJECT
